# legate.core

./: .dockerignore  .gitattributes  .gitignore  .pre-commit-config.yaml  BUILD.html  BUILD.md  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.html  CONTRIBUTING.md  MANIFEST.in  README.html  README.md  api.html  bind.sh  genindex.html  index.html  index.md  install.py  install_jupyter_kernel.py  legate-create-library  legate.py  legate_core.cmake  legate_core_cpp.cmake  legate_core_python.cmake  legate_info.py  legate_jupyter.json  new-install.py  objects.inv  pyproject.toml  search.html  searchindex.js  setup.cfg  setup.old.py  setup.py  versions.html
.devcontainer/: Dockerfile  devcontainer.json
_sources/: CONTRIBUTING.md.txt  README.md.txt  api.rst.txt  index.rst.txt
api/: allocation.html  classes.html  index.html  operation.html  routines.html  runtime.html  shape.html  store.html
cmake/: cpp_header_template  generate_install_info_py.cmake  legate_gen_library.in  legate_helper_functions.cmake  versions.json
conda/: core_dev.yml  environment-test-3.10.yml  environment-test-3.8.yml  environment-test-3.9.yml
continuous_integration/: Dockerfile  build-docker-image  build.dockerfile  devcontainer-utils-vault-s3-test  post_py.patch  test.dockerfile
cpp-interface/: allocator_8h.html  allocator_8h__dep__incl.map  allocator_8h__dep__incl.md5  allocator_8h__incl.map  allocator_8h__incl.md5  allocator_8h_source.html  annotated.html  buffer_8h.html  buffer_8h__dep__incl.map  buffer_8h__dep__incl.md5  buffer_8h__incl.map  buffer_8h__incl.md5  buffer_8h_source.html  classes.html  classlegate_1_1LibraryContext-members.html  classlegate_1_1LibraryContext.html  classlegate_1_1Scalar-members.html  classlegate_1_1Scalar.html  classlegate_1_1ScopedAllocator-members.html  classlegate_1_1ScopedAllocator.html  classlegate_1_1Store-members.html  classlegate_1_1Store.html  classlegate_1_1TaskContext-members.html  classlegate_1_1TaskContext.html  classlegate_1_1TaskException-members.html  classlegate_1_1TaskException.html  classlegate_1_1TaskRegistrar-members.html  classlegate_1_1TaskRegistrar.html  classlegate_1_1mapping_1_1LegateMapper-members.html  classlegate_1_1mapping_1_1LegateMapper.html  classlegate_1_1mapping_1_1MachineQueryInterface-members.html  classlegate_1_1mapping_1_1MachineQueryInterface.html  classlegate_1_1mapping_1_1Store-members.html  classlegate_1_1mapping_1_1Store.html  classlegate_1_1mapping_1_1Task-members.html  classlegate_1_1mapping_1_1Task.html  context_8h.html  context_8h__dep__incl.map  context_8h__dep__incl.md5  context_8h__incl.map  (+169 more)
docker/: Dockerfile
examples/: .clang-format  CMakeLists.txt
examples/hello/: CMakeLists.txt  README.md  editable-install.sh  setup.py
examples/hello/examples/: cunumeric-variance.py  hello-world.md  hello-world.py  variance.md  variance.py
examples/hello/hello/: __init__.py  hello.py
examples/hello/src/: CMakeLists.txt  hello_cffi.h  hello_world.cc  hello_world.h  iota.cc  square.cc  sum.cc
examples/io/: CMakeLists.txt  README.md  editable-install.sh  setup.py
examples/io/examples/: even_tiles.py  single_file.py  uneven_tiles.py
examples/io/legateio/: __init__.py  legateio.py
examples/io/src/: CMakeLists.txt  legateio.cc  legateio.h  legateio_cffi.h  read.cc  read_dataset.cc  read_even_tiles.cc  read_file.cc  read_uneven_tiles.cc  util.cc  util.h  write_dataset.cc  write_even_tiles.cc  write_file.cc  write_uneven_tiles.cc
legate/: __init__.py  __main__.py  _version.py  args.py  cpp_header_template  cpp_source_template  info.py  install_info.py.in  issue.py  lgpatch.py  python_template  rc.py  settings.py
scripts/: build-install.sh  build-no-install.sh  build-separately-no-install.sh  build-with-legion-no-install.sh  build-with-legion-separately-no-install.sh  conda-build.sh  devcontainer-update-content.sh  generate-conda-envs.py  launch-devcontainer-conda.sh  launch-devcontainer-pip.sh  launch-devcontainer.sh  lgpatch.py  replicate-ci.sh  viz-gpu-test-log.py
src/: .clang-format  Makefile  config.mk.in  context.cc  context.h  core.cc  core.h  core.inl  core.mk  cudalibs.cc  cudalibs.h  deserializer.cc  (+17 more)
tests/integration/: CMakeLists.txt  setup.py
tests/integration/collective/: CMakeLists.txt  editable-install.sh  setup.py
tests/integration/collective/collective/: __init__.py  collective.py  lib.py
tests/integration/collective/examples/: collective.py  test_collective.py
tests/integration/collective/src/: CMakeLists.txt  collective_cffi.h  collective_test.cc  collective_test.h  library.cc  library.h
tests/integration/examples/: collective.py
tests/integration/integration/: __init__.py
tests/integration/region_manager/: CMakeLists.txt  setup.py
tests/integration/region_manager/examples/: test_region_manager.py
tests/integration/region_manager/region_manager/: lib.py
tests/integration/region_manager/src/: CMakeLists.txt  library.cc  library.h  region_manager_cffi.h  tester.cc  tester.h
tests/integration/registry/: CMakeLists.txt  editable-install.sh  install.sh  setup.py
tests/integration/registry/examples/: test_registry.py
tests/integration/registry/registry/: __init__.py  lib.py
tests/integration/registry/src/: CMakeLists.txt  hello.cc  library.cc  library.h  no_variant.cc  registry_cffi.h  world.cc  world.h
tests/integration/scoping/: CMakeLists.txt  setup.py
tests/integration/scoping/examples/: test_scoping.py
tests/integration/scoping/scoping/: __init__.py  lib.py
tests/integration/scoping/src/: CMakeLists.txt  library.cc  scoping_cffi.h
tests/integration/src/: CMakeLists.txt  collective_test.cc  collective_test.h  integration_cffi.h
tests/integration/tree_reduce/: CMakeLists.txt  editable-install.sh  setup.py
tests/integration/tree_reduce/examples/: test_tree_reduce.py
tests/integration/tree_reduce/src/: CMakeLists.txt  library.cc  library.h  produce_normal.cc  produce_normal.h  produce_unbound.cc  produce_unbound.h  reduce_normal.cc  reduce_normal.h  reduce_unbound.cc  reduce_unbound.h  tree_reduce_cffi.h
tests/integration/tree_reduce/tree_reduce/: lib.py
(+582 files in other folders)
