# Copyright (c) 2021-2022, NVIDIA CORPORATION.

# See the docstring in versioneer.py for instructions. Note that you must
# re-run 'versioneer.py setup' after changing this section, and commit the
# resulting files.

[versioneer]
VCS = git
style = pep440
versionfile_source = legate/_version.py
versionfile_build = legate/_version.py
tag_prefix = v
parentdir_prefix = legate-

[options.packages.find]
where = .
include = legate*
exclude = install_info

[flake8]
exclude = __init__.py
ignore =
    # line break before binary operator
    W503
    # whitespace before :
    E203

[isort]
line_length=79
multi_line_output=3
include_trailing_comma=True
force_grid_wrap=0
combine_as_imports=True
order_by_type=True
known_third_party=
    numpy
known_legion=
    legion_cffi
    legion_top
known_first_party=
    legate.core
default_section=THIRDPARTY
sections=FUTURE,STDLIB,THIRDPARTY,LEGION,FIRSTPARTY,LOCALFOLDER
skip=
    .eggs
    .git
    .mypy_cache
    .tox
    .venv
    _build
    build
    dist
    __init__.py
skip_glob=
    legion/*
    install/*


[options]
packages = find:
install_requires =
    numpy>=1.22
    # TODO: Add rest of install dependencies
python_requires = >=3.9,!=3.9.7
